Tune errors management in disambiguation widget UI Fix fatal error on add new entity button visibility check

--- a/src/less/wordlift-reloaded.less
+++ b/src/less/wordlift-reloaded.less
@@ -154,19 +154,10 @@
   }
   
   .wl-error {
+    margin-bottom: 6px;
     padding:2px 12px;
-    border-left:#f00 4px solid;
+    border-left:@wl-brand-color 4px solid;
     font-size: 11px;
-
-    .wl-date {
-      padding: 2px 0px;
-      font-weight: bold;
-      border-bottom:#ccc 1px dashed;
-    }
-    .wl-msg {
-      padding-left: 6px;
-    }
-
   }
 
   input, select, textarea {
